<resources>
    <string name="app_name">OTAMS</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="authenticating">Authenticating</string>
    <string name="action_register">REGISTER</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Role Switch -->
    <string name="role_student">Student</string>
    <string name="role_tutor">Tutor</string>

    <!-- Common Fields -->
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone">Phone Number</string>

    <!-- Student Fields -->
    <string name="hint_program">Program of Study</string>
    <string name="hint_courses_enrolled">Courses Enrolled</string>

    <!-- Tutor Fields -->
    <string name="hint_courses_offered">Courses Offered</string>
    <string name="hint_highest_degree">Highest Degree</string>

    <!-- Button -->
    <string name="register">Register</string>
    <string name="not_logged_in">Not logged in.</string>
    <string name="you_belong_to_the_student_collection">You belong to the Student collection.</string>
    <string name="you_belong_to_the_tutor_collection">You belong to the Tutor collection.</string>
    <string name="you_are_the_administrator">You are the Administrator.</string>
    <string name="your_role_could_not_be_determined">Your role could not be determined.</string>
    <string name="error_checking_tutor_collection">"Error checking tutor collection: "</string>
    <string name="error_checking_student_collection">"Error checking student collection: "</string>
    <string name="no_users_found">No users found</string>
    <string name="log_out">LOG OUT</string>
    <string name="user_data_not_found_contact_admin">User data not found. Contact Admin</string>
    <string name="user_is_pending_approval">User is pending approval.</string>
    <string name="your_account">"Your account is "</string>
    <string name="contact_admin">". Please contact admin. 11111111"</string>
    <string name="criteria_pending">PENDING</string>
    <string name="criteria_rejected">REJECTED</string>
    <string name="no_data_available">No data available.</string>
    <string name="past_sessions">Past Sessions</string>
    <string name="future_sessions">Future Sessions</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="location">Location</string>
    <string name="start_time_e_g_08_00">Start Time (e.g. 08:00)</string>
    <string name="date_yyyy_mm_dd">Date (YYYY-MM-DD)</string>
    <string name="end_time_e_g_08_30">End Time (e.g. 08:30)</string>
    <string name="auto_approve_session_requests">Auto-approve session requests</string>
    <string name="criteria_accepted">APPROVED</string>
    <string name="cancel_this_session">Cancel this Session</string>
    <string name="_3">3</string>

</resources>